@startuml ERD Sistem Manajemen Jamaah Haji

title Entity-Relationship Diagram (ERD) Sistem Manajemen Jamaah Haji

' Entitas Admin
entity "Admin" as admin {
  * id : INT
  --
  username : VARCHAR(250)
  email : VARCHAR(250)
  password : VARCHAR(250)
}

' Entitas Pengguna
entity "Pengguna" as pengguna {
  * id : INT
  --
  username : VARCHAR(250)
  email : VARCHAR(250)
  password : VARCHAR(250)
}

' Entitas Pembimbing Haji
entity "Pembimbing_Haji" as pembimbing {
  * id : INT
  --
  nama_lengkap : VARCHAR(250)
  nik : VARCHAR(20)
  telepon : VARCHAR(15)
  email : VARCHAR(250)
  alamat : TEXT
  foto : VARCHAR(255)
  keterangan : TEXT
}

' Entitas Jamaah Haji (untuk tahun 2026)
entity "Jamaah_Haji" as jamaah_haji {
  * id : INT
  --
  id_pembimbing : INT (FK)
  nama_lengkap : VARCHAR(250)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(20)
  jenis_kelamin : ENUM('Laki-laki', 'Perempuan')
  tanggal_lahir : DATE
  alamat : TEXT
  telepon : VARCHAR(15)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : TEXT
  jadwal_berangkat : DATE
  data_pulang : DATE
  foto : VARCHAR(255)
  status : ENUM('Lunas', 'Belum lunas')
}

' Entitas Jamaah 2027
entity "Jamaah_2027" as jamaah_2027 {
  * id : INT
  --
  id_pembimbing : INT (FK)
  nama_lengkap : VARCHAR(250)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(20)
  jenis_kelamin : ENUM('Laki-laki', 'Perempuan')
  tanggal_lahir : DATE
  alamat : TEXT
  telepon : VARCHAR(15)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : TEXT
  jadwal_berangkat : DATE
  data_pulang : DATE
  foto : VARCHAR(255)
  status : ENUM('Lunas', 'Belum lunas')
}

' Entitas Jamaah 2028
entity "Jamaah_2028" as jamaah_2028 {
  * id : INT
  --
  id_pembimbing : INT (FK)
  nama_lengkap : VARCHAR(250)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(20)
  jenis_kelamin : ENUM('Laki-laki', 'Perempuan')
  tanggal_lahir : DATE
  alamat : TEXT
  telepon : VARCHAR(15)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : TEXT
  jadwal_berangkat : DATE
  data_pulang : DATE
  foto : VARCHAR(255)
  status : ENUM('Lunas', 'Belum lunas')
}

' Entitas Jamaah 2029
entity "Jamaah_2029" as jamaah_2029 {
  * id : INT
  --
  id_pembimbing : INT (FK)
  nama_lengkap : VARCHAR(250)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(20)
  jenis_kelamin : ENUM('Laki-laki', 'Perempuan')
  tanggal_lahir : DATE
  alamat : TEXT
  telepon : VARCHAR(15)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : TEXT
  jadwal_berangkat : DATE
  data_pulang : DATE
  foto : VARCHAR(255)
  status : ENUM('Lunas', 'Belum lunas')
}

' Entitas Berita
entity "Berita" as berita {
  * id : INT
  --
  judul : VARCHAR(255)
  konten : TEXT
  tanggal_publikasi : DATE
  penulis : VARCHAR(100)
  gambar : VARCHAR(255)
}

' Relasi
pembimbing ||--o{ jamaah_haji : "membimbing (1:N)"
pembimbing ||--o{ jamaah_2027 : "membimbing (1:N)"
pembimbing ||--o{ jamaah_2028 : "membimbing (1:N)"
pembimbing ||--o{ jamaah_2029 : "membimbing (1:N)"

admin -- berita : "mengelola"
admin -- pembimbing : "mengelola"
admin -- jamaah_haji : "mengelola"
admin -- jamaah_2027 : "mengelola"
admin -- jamaah_2028 : "mengelola"
admin -- jamaah_2029 : "mengelola"

' Pengguna melihat berita dan melihat data jamaah (relasi tidak langsung)
pengguna -- berita : "melihat"
pengguna -- jamaah_haji : "melihat data"
pengguna -- jamaah_2027 : "melihat data"
pengguna -- jamaah_2028 : "melihat data"
pengguna -- jamaah_2029 : "melihat data"
pengguna -- penbingbing : "melihat data"

@enduml

